tests/baselines/reference/readonlyTupleAndArrayElaboration.errors.txt
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(10,20): error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type '[number, number]'.
  The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type '[number, number]'.
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(13,8): error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type 'number[]'.
  The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(16,9): error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type 'number[]'.
  The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(22,9): error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
  The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(23,9): error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
  The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
tests/cases/compiler/readonlyTupleAndArrayElaboration.ts(24,9): error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
  The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.


==== tests/cases/compiler/readonlyTupleAndArrayElaboration.ts (6 errors) ====
    // @strict
    // #Repro from #30839
    
    let point = [3, 4] as const;
    
    function distanceFromOrigin([x, y]: [number, number]) {
        return Math.sqrt(x ** 2 + y ** 2);
    }
    
    distanceFromOrigin(point);
                       ~~~~~
!!! error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type '[number, number]'.
!!! error TS2345:   The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type '[number, number]'.
    
    declare function arryFn(x: number[]): void;
    arryFn(point);
           ~~~~~
!!! error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
    
    declare function arryFn2(x: Array<number>): void;
    arryFn2(point);
            ~~~~~
!!! error TS2345: Argument of type 'readonly [3, 4]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   The type 'readonly [3, 4]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
    
    declare const a: readonly number[];
    declare const b: Readonly<number[]>;
    declare const c: ReadonlyArray<number>;
    
    arryFn2(a);
            ~
!!! error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
    arryFn2(b);
            ~
!!! error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
    arryFn2(c);
            ~
!!! error TS2345: Argument of type 'readonly number[]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   The type 'readonly number[]' is 'readonly' and cannot be assigned to the mutable type 'number[]'.
    